--- a/style.css
+++ b/style.css
@@ -27,3 +27,9 @@
     text-align: center;
     font-size: 20px;
 }
+
+.footer_container {
+    height: 100px;
+    background-color: rgb(17, 145, 196);
+    color:white;
+}
