--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .cabecalho_container {
-    background-color: black;
+    background-color: #ffffff;
     width: 100%;
     height: 100px;
 }
@@ -11,12 +11,23 @@
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
-    padding-top: 30px;
     font-size: 35px;
+    margin-top: 15px;
+    display: inline-block;
+    vertical-align: top;
+}
+
+button {
+    color:  black;
+    font-size: 20px;
+    font-family: 'Ubuntu Mono', monospace;
+    padding: 5px;
+    margin:  20px 10px  10px 10px;
+    
 }
 
 .main_container {
-    background-image: linear-gradient(to bottom, rgb(0, 0, 0), rgb(17, 145, 196));
+    background-image: conic-gradient(#6495ED, #483D8B, #6495ED);
     height: 700px;
 }
 
@@ -26,15 +37,4 @@
     padding: 40px 20px 50px 50px;
     text-align: center;
     font-size: 20px;
-}
-
-.footer_container {
-    height: 100px;
-    background-color: rgb(17, 145, 196);
-    color:white;
-    border-top: 7px solid blue;
-    border-bottom: 25px solid black;
-    text-align: center;
-    vertical-align: center;
-    font-family: 'Ubuntu Mono', monospace;
 }
